--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "bootstrap": "3.3.5",
     "angular-oauth2": "~3.0.1",
     "font-awesome": "fontawesome#^4.5.0",
-    "ng-file-upload-shim": "7.0.17"
+    "ng-file-upload-shim": "7.0.17",
+    "angular-http-auth": "^1.3.0"
   }
 }
