--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,8 @@
     "angularUtils-pagination": "angular-utils-pagination#^0.11.1",
     "moment": "^2.13.0",
     "pusher": "^3.0.0",
-    "pusher-angular": "^0.1.9"
+    "pusher-angular": "^0.1.9",
+    "angular-ui-notification": "^0.2.0",
+    "angular-momentjs": "^0.2.2"
   }
 }
