--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "prettus/laravel-validation": "1.1.*",
         "lucadegasperi/oauth2-server-laravel": "^5.1",
         "league/fractal": "^0.13.0",
-        "pusher/pusher-php-server": "^2.0"
+        "pusher/pusher-php-server": "^2.0",
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
